...
        modifier = Modifier
            .fillMaxWidth()
            .background(
                color = Color(0xFF0081FF),
                shape = RoundedCornerShape(bottomStart = 24.dp, bottomEnd = 24.dp)
            )
            .padding(horizontal = 25.dp, vertical = 18.dp).testTag("EventCardItem")
    ) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier.fillMaxWidth()
        ) {
            Icon(
                imageVector = Icons.Filled.Search,
                contentDescription = "Search Button",
                tint = Color.White,
                modifier = Modifier.size(28.dp)
            )
            Spacer(modifier = Modifier.width(10.dp))
            VerticalDivider(modifier = Modifier.height(28.dp))
            Box(
...
