...

    Scaffold(
        modifier = modifier.fillMaxSize(),
        containerColor = Color.White,
        bottomBar = {
            MenuComponent(
                currentPage = "Search",
                navController = navController
            )
        }
    ) { innerPadding ->
        Column(
            modifier = Modifier
...
            if(isConnected){
                Box(
                    modifier = Modifier
                        .fillMaxWidth()
                        .weight(1.3f)
                        .background(Color.Gray)
                        .testTag("GoogleMap"),
                ) {
                    GoogleMap(
                        modifier = Modifier.fillMaxSize(),
                        cameraPositionState = cameraPositionState
                    ) {
                        events.forEach { event ->
...
