...
                        verticalAlignment = Alignment.CenterVertically,
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(horizontal = 25.dp)
                    ) {
                        Text(
                            text = "Upcoming Events",
                            style = MaterialTheme.typography.titleLarge,
                            fontWeight = FontWeight.Bold,
                            modifier = Modifier.testTag("upcomingField")
                        )

                        Row(verticalAlignment = Alignment.CenterVertically) {
                            if (isFilterActive) {
                                TextButton(
                                    onClick = {
...
