...
@Composable
fun MenuComponent(
    currentPage: String,
    navController: NavController
) {
    val menuItems = listOf(
        Triple("Home", R.drawable.home, R.drawable.home_filled),
        Triple("Search", R.drawable.search, R.drawable.search_filled),
        Triple("Create", R.drawable.add, R.drawable.add_filled),
        Triple("Tickets", R.drawable.ticket, R.drawable.ticket_filled),
        Triple("Profile", R.drawable.profile_circle, R.drawable.profile_filled)
    )

    Row(
        modifier = Modifier
            .fillMaxWidth()
            .padding(vertical = 12.dp),
...
