...
    ) {
        if (arrowBack) {
            Icon(
                imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                contentDescription = "Back",
                modifier = Modifier
                    .testTag("backButton")
                    .size(28.dp)
                    .clickable {
                        if (!fromPayment){
                            navController.popBackStack()
                        } else {
                            navController.navigate("home")
...
